made formatting changes to markdown cells
I made changes to the formatting of the markdown cells so my answers are more clear and readable to be graded. I also added some extra details about the data sets and the variables and observations they contain in question 1.

--- a/project.ipynb
+++ b/project.ipynb
@@ -966,17 +966,35 @@
    "id": "fb8523d2-7ea1-4e21-a2ac-ce05ceecabd7",
    "metadata": {},
    "source": [
-    "1) Data Description\n",
-    "   Players Data: In the player data there are 7 variables (experience, subscribe, hashedEmail, played hours, name, gender, and age). The data is tidy where each colum represents one variable and each row contains one column.\n",
+    "# **1) Data Description**\n",
+    "   **Players Data**: In the player data there are 7 variables (experience, subscribe, hashedEmail, played hours, name, gender, and age). The data is tidy where each colum represents one variable and each row contains one column.\n",
     "   (see \"summary(players_data)\" for summary of data)\n",
+    "## In players.csv it is data about the demographic of the individual players, their subscription status, and played time.\n",
+    "There are 196 observations in 7 columns, the variables of the columns are: experience, subscribe, hashedEmail, played_hours, name, gender, and Age.\n",
     "\n",
-    "   Sessions Data: In the session data there are 5 variables (hashedEmail, start time, end time, original start time, and original end time). The data is tidy but for the question I will be answering I would like to only work with one type of the time values. I will select for the start_time and end_time columns since the data is formatted in a readable way versus the original_start_time and original_end_time columns.\n",
-    "   (see \"summary(sessions_data)\" for summary of data)"
+    "- experience is a character variable with 5 categories: amateur, beginner, pro, regular, and veteran. This variable describes the individuals experience level at Minecraft.\n",
+    "- subscribe is a logical variable with 2 categories: true or false. This variable tells us if the player is subscribed to the newsletter(true) or not(false).\n",
+    "- hashedEmail is a character variable. This variable acts as a unique identifier for each player.\n",
+    "- played_hours is a double variable. This variable tell us the individuals play time on the Minecraft server.\n",
+    "- name is a character variable. This variable is telling us each individual players name.\n",
+    "- gender is a character variable. This variable is telling us each individuals gender.\n",
+    "- Age is a double variable. This variable is telling us each individuals age.\n",
+    "\n",
+    "   **Sessions Data**: In the session data there are 5 variables (hashedEmail, start time, end time, original start time, and original end time). The data is tidy but for the question I will be answering I would like to only work with one type of the time values. I will select for the start_time and end_time columns since the data is formatted in a readable way versus the original_start_time and original_end_time columns which are in Unix timestamp format.\n",
+    "   (see \"summary(sessions_data)\" for summary of data)\n",
+    "## In sessions.csv it is data of each individual player and their play session information.\n",
+    "There are 1,535 observations in 5 columns, the variables of the columns are: hashedEmail, start_time, end_time, original_start_time, original_end_time.\n",
+    "\n",
+    "- hashedEmail is a character variable. This variable acts as a unique identifier for each player.\n",
+    "- start_time is a character variable. This variable tells us the start time of the play session.\n",
+    "- end_time is a character variable. This variable tells us the end time of the play session.\n",
+    "- original_start_time is a numeric variable. This variable tell us the original start time of the play session in Unix timestampe format.\n",
+    "- original_end_time is a numeric variable. This variable tell us the original end time of the play session in Unix timestamp format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "id": "5117b25f-c5ae-4496-9ead-431d125d3f8c",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "id": "2ca8f5d9-d254-4800-9b7d-ed996bf83041",
    "metadata": {},
    "outputs": [
@@ -1495,13 +1513,22 @@
    "id": "abe88f3f-8704-4ce2-b72b-ad9d0d642100",
    "metadata": {},
    "source": [
-    "2)Questions \n",
-    "I chose broad question 1: What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?\n",
-    "My specific question I formulated based off this question is: Can the player's experience level, total hours played, Age, and gender predict whether they are going to subscribe to the game newsletter in the players.csv data set?\n",
-    "The explanatory variables are: experience, played_hours, Age, and gender.\n",
-    "The response variable is: subscribe.\n",
-    "How will this data help me answer my question: the players.csv data contains all these variables, when using predictive models these variables will be useful to show us the relationship between the explanatory variables and response variable.\n",
-    "How I plan to wrangle data to fit into predictive model: I will need to convert the categorical variables like experience and gender to factors so they can be used in predictive models, so I will use mutate. I will make sure there are no missing observations in the data set in any of the columns and if there are I will remove the rows before using a predictive model. I will scale any numerical observations if needed before predicivive modeling. I will make training and testing sets in order to determine the accuracy of the predictive model.\n"
+    "# **2)Questions**\n",
+    "**I chose broad question 1:** \n",
+    "What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?\n",
+    "\n",
+    "**My specific question I formulated based off this question is:** \n",
+    "Can the player's experience level, total hours played, Age, and gender predict whether they are going to subscribe to the game newsletter in the players.csv data set?\n",
+    "\n",
+    "**The explanatory variables are:** experience, played_hours, Age, and gender.\n",
+    "\n",
+    "**The response variable is:** subscribe.\n",
+    "\n",
+    "**How will this data help me answer my question:**\n",
+    "the players.csv data contains all these variables, when using predictive models these variables will be useful to show us the relationship between the explanatory variables and response variable.\n",
+    "\n",
+    "**How I plan to wrangle data to fit into predictive model:**\n",
+    "I will need to convert the categorical variables like experience and gender to factors so they can be used in predictive models, so I will use mutate. I will make sure there are no missing observations in the data set in any of the columns and if there are I will remove the rows before using a predictive model. I will scale any numerical observations if needed before predicivive modeling. I will make training and testing sets in order to determine the accuracy of the predictive model.\n"
    ]
   },
   {
@@ -1517,13 +1544,20 @@
    "id": "b48616b3-f83e-42ca-ad31-8ed575c9dcb5",
    "metadata": {},
    "source": [
-    "3)Exploratory Data Analysis and Visualization\n",
+    "# **3)Exploratory Data Analysis and Visualization**\n",
+    "\n",
     "I already loaded the data into R and read both data sets(see above)\n",
+    "\n",
     "The players.csv data was tidy so no changes needed, the sessions.csv data contained many columns of the timestampes of play time from the players so I just selected for the timestamp variable columns I wanted(see above).\n",
+    "\n",
     "I will use summarize to get the mean values of the quantitave variables(Age and played_hours) in the players.csv data set(see below).\n",
+    "\n",
     "I will make a histogram visualization of the played_hours, this will provide insight for if players that subscribed tend to play more or less hours.\n",
+    "\n",
     "I will make a hisogram of the age to provide insight as to if the players that subscribed were on the older or younger end of the age range.\n",
+    "\n",
     "I will then make a box plot of the played hours vs subscribe, this will provide insight to see if being subscribed or not determined the amount of played hours.\n",
+    "\n",
     "I will lastly make a bar plot of the experience vs subscribed to provide insight of if more or less expereinced players subscribed or not.\n"
    ]
   },
@@ -3809,6 +3843,22 @@
    "source": [
     "fourth git commit ^"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eb0035b-88f7-4722-8f24-e6734a60ef4f",
+   "metadata": {},
+   "source": [
+    "fifth git commit ^"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f9d7ca9-66eb-4be4-bd13-2de0dcacc422",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
