--- a/project_group14.ipynb
+++ b/project_group14.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "id": "f605ae1b-526d-485e-b94d-fb323335c505",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
     }
    ],
    "source": [
-    "players_data <- read_csv(\"data/players.csv\")\n",
+    "players_data <- read_csv(\"https://raw.githubusercontent.com/g3mella/dsci-100-project-2025/refs/heads/main/players.csv\")\n",
     "players_data"
    ]
   },
